# ai-code-auditor

./: .gitignore  FIELD-TRIAL.md  LICENSE  README.md  RESEARCH.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ai-audit.md
docs/quality/: W2-B2.8D-quality-baseline.md  baseline-summary.json
docs/superpowers/plans/: 2026-07-17-adversarial-review.md  2026-07-17-ai-code-auditor-mvp.md
evidence/: README.md  cp3-final-batch.md  cp4-checkpoint.md  cp5-checkpoint.md  cp7-cp8-checkpoint.md  cp8-contract-batch.md  cp8b-contract-batch.md  log4j-metadata.xml  r003v2_test.py  semgrep_license_text.txt  xml_stress.py
evidence/react-compare/: compare.py  compare_auditor.py  comparison.md  eslint-results.json  eslint.config.mjs  nextdemo-results.json  package-lock.json  package.json  prototype-results.json  prototype.py
evidence/react-compare/corpus/: arrow_component_ok.tsx  clean_component.tsx  custom_hook_ok.tsx  dangerous_html_direct.tsx  effect_deps_complete.tsx  effect_missing_dep.tsx  effect_no_deps.tsx  effect_reads_setter.tsx  hook_after_early_return.tsx  hook_in_class_method.tsx  hook_in_event_handler.tsx  hook_in_for.tsx  hook_in_if.tsx  hook_in_logical_and.tsx  hook_in_plain_function.tsx  hook_in_ternary.tsx  hook_in_try_catch.tsx  hook_in_useeffect_cb.tsx  hook_in_usememo_cb.tsx  pascalcase_object_hook.tsx  react_namespace_hook.tsx  service_object_hook.tsx
evidence/react-compare/nextdemo/app/: page.tsx
evidence/react-compare/nextdemo/components/: ClientParent.tsx  Hooky.tsx  Leaf.tsx
examples/: report.json  report.md
src/auditor/: cli.py  config.py  discovery.py  errors.py  fetch.py
src/auditor/adapters/: __init__.py
src/auditor/adapters/dotnet/: adapter.py  rules.py  sql_trust.py
src/auditor/adapters/java/: adapter.py  known_artifacts.py  rules.py
src/auditor/adapters/python/: adapter.py  aliases.py
src/auditor/adapters/typescript/: adapter.py  builtins.py  dom_safety.py  next_graph.py  next_rules.py  react_rules.py
src/auditor/ai/: __init__.py  audit.py  audit_index.py  audit_queries.py  audit_store.py  batch.py  consent.py  contract.py  providers.py  review.py  review_store.py  transport.py
src/auditor/core/: baseline.py  catalog.py  complexity.py  execution.py  hallucination.py  interfaces.py  levels.py  models.py  ownership.py  patterns.py  policy.py  rules_common.py  scoring.py  semgrep_rules_meta.py  semgrep_runner.py  treesitter.py  walk.py
src/auditor/registries/: base.py  cache.py  maven.py  npm.py  nuget.py  pypi.py
src/auditor/report/: build.py  json_out.py  markdown.py  sarif.py
src/auditor/semgrep_rules/: auditor-extra.yml
src/auditor/web/: __init__.py  app.py  coverage.py  reviews.py
src/auditor/web/static/: index.html
src/auditor/web/static/assets/: index-B4eDMiU_.js  index-BFuoBwiM.js  index-BbCiAVrI.css  index-BkJfw2_t.js  index-BndZSuwR.css  index-BtnEtgw4.js  index-BxqVEU5O.css  index-C1fpfIco.css  index-C3p--Yv9.css  index-CKBVT0mc.css  index-CVHM5Njd.css  index-Ca2IJzQ6.js  index-Cb5sdCdR.js  index-CkL6pAVL.js  index-CoahwlAA.css  index-DEd-DAgo.js  index-DM4rs7Fz.js  index-DhYjWicK.js  index-DiV8cC8P.js  index-HWd7mU0G.css  index-c3teDkZG.css  index-hFWsg6bp.js  index-izQ3Okbf.css  index-mrpIkA5C.js  index-y4l43qVI.css
tests/: conftest.py  test_ai_audit.py  test_ai_batch.py  test_ai_consent.py  test_ai_live.py  test_ai_providers.py  test_ai_review.py  test_ai_web.py  test_baseline.py  test_cache.py  test_catalog.py  test_cli_e2e.py  test_cli_version.py  test_complexity.py  test_cp8_contracts.py  test_cp8b_contracts.py  test_discovery.py  test_dotnet_adapter.py  test_dotnet_providers.py  test_execution_hallucination.py  test_execution_ledger.py  test_execution_project.py  test_execution_semgrep.py  test_execution_status.py  test_fetch.py  test_hallucination.py  test_java_adapter.py  test_lang_rules.py  test_models.py  test_next_graph.py  test_next_rules.py  test_ownership.py  test_patterns_semgrep.py  test_policy.py  test_precision_b28c.py  test_precision_b28c1.py  test_python_adapter.py  test_python_e2e.py  test_quality_baseline.py  test_quality_eval.py  (+24 more)
tests/fixtures/dotnet_repo/: App.csproj  Program.cs
tests/fixtures/java_repo/: pom.xml
tests/fixtures/java_repo/src/main/java/com/example/: Main.java
tests/fixtures/monorepo/: requirements.txt
tests/fixtures/monorepo/web/: .env.local  package.json  tsconfig.json
tests/fixtures/monorepo/web/lib/: db.ts  local.ts
tests/fixtures/python_repo/: app.py
tests/fixtures/ts_repo/app/: page.tsx
tests/fixtures/ts_repo/components/: Widget.tsx
tools/: audit_eval.py  quality_baseline.py  quality_eval.py  quality_sample.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  ai.ts  aiAudit.ts  aiBatch.ts  aiReview.ts  api.ts  baseline.ts  levels.ts  main.tsx  rulecov.ts  selection.ts  styles.css  types.ts
web/src/components/: AIAuditPanel.tsx  AIBatchPanel.tsx  AIProvidersPanel.tsx  CoveragePanel.tsx  DetailPanel.tsx  FindingsControls.tsx  FindingsTable.tsx  RulesPanel.tsx  Sidebar.tsx  TopBar.tsx
web/tests/: ai.test.mjs  aiAudit.test.mjs  aiBatch.test.mjs  aiReview.test.mjs  baseline.test.mjs  levels.test.mjs  rulecov.test.mjs  selection.test.mjs
