[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-auditor"
version = "0.1.0"
description = "Deterministic auditor for AI-generated code: hallucinated dependencies and risky patterns across Python, Java, .NET and TypeScript/React/Next.js"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tree-sitter>=0.26,<0.27",
    "tree-sitter-python>=0.25,<0.26",
    "tree-sitter-java>=0.23.5,<0.24",
    "tree-sitter-c-sharp>=0.23.5,<0.24",
    "tree-sitter-typescript>=0.23.2,<0.24",
    "requests>=2.32",
    "platformdirs>=4.0",
    "lizard>=1.23",
    "defusedxml>=0.7",
    "packaging>=24.0",
]

[project.scripts]
auditor = "auditor.cli:main"

[project.optional-dependencies]
# the local Report Explorer backend (W1). Kept optional so the core scanner
# stays dependency-light; `auditor serve` requires `pip install .[web]`.
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
# pinned so `pip install -e .[dev]` reproduces the CI toolchain exactly, incl.
# the defusedxml stubs mypy needs (CP-8.12: bare `mypy src` was not reproducible)
dev = [
    "pytest>=8.0,<9",
    "responses>=0.25,<0.26",
    "mypy>=1.13,<2",
    "ruff>=0.8,<0.9",
    "types-defusedxml>=0.7,<0.8",
    "types-requests>=2.32,<3",
    "httpx>=0.26",             # FastAPI TestClient transport for the web tests
]

[tool.hatch.build.targets.wheel]
packages = ["src/auditor"]
# the Vite build output lands here (gitignored) — re-include it so the SPA
# ships inside the wheel and is served by `auditor serve` from any install.
artifacts = ["src/auditor/web/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
# the project's canonical mypy config — `mypy src` reproduces without extra
# flags. Third-party libs without stubs are ignored here, not on the CLI.
ignore_missing_imports = true
